--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -90,12 +90,12 @@
                 style="display: flex;flex-direction: column;position: relative;">
 
                 <div class="emoji-handle">.</div>
-                <div class="test-name-table">
-                    <div style="width: 33%;text-align: start;margin-left: 20px;">TEST NAME</div>
-                    <div style="width: 33%;text-align: start;margin-left: 50px;">RATIONALE</div>
-                    <div style="width: 33%;text-align: start;margin-left: 20px;">RATING</div>
+                <div class="test-name-table" style="margin-top: 20px;">
+                    <div style="width: 33%;text-align: center; font-size: 20px;   font-weight: bold;color: #324395;margin-left: 20px;">NAME</div>
+                    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 50px;">RATIONALE</div>
+                    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 20px;">RATING</div>
                 </div>
-
+<hr>
                 <!-- UPLOAD TESTNAMES -->
                 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
                     <div style="text-align: center;">
@@ -132,13 +132,13 @@
                 <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin:10px 10px;">
                     <div class="test-name-table">
 
-                        <div style="width: 33%;text-align: start;margin-left: 10px;">{{testName.name}}</div>
+                        <div style="width: 33%;text-align: center;margin-left: 10px;">{{testName.name}}</div>
 
 
-                        <div style="width: 33%;text-align: start;margin-left: 10px;">{{testName.rationale}}</div>
+                        <div style="width: 33%;text-align: center;margin-left: 10px;">{{testName.rationale}}</div>
 
-                        <div *ngFor="let star of  testName.STARS; let i = index">
-                            <button (mouseenter)="selectStar(star.id , y)" (click)="setRating(star.id,y)"
+                        <div  style="margin-left: 80px;">
+                            <button *ngFor="let star of  testName.STARS" (mouseenter)="selectStar(star.id , y)" (click)="setRating(star.id,y)"
                             [ngClass]="star.class" style="outline: none;" mat-icon-button
                             aria-label="ranking">
                             <mat-icon>{{star.icon}}</mat-icon>
