--- a/src/app/elite/elite-promoter/elite-promoter.component.html
+++ b/src/app/elite/elite-promoter/elite-promoter.component.html
@@ -1,26 +1,14 @@
 <div class="mainContainer disable-dbl-tap-zoom">
-
+    <!-- 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 LOGO 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 -->
     <div class="logo-miami">
         <img class="logo" src="./assets/img/elite/logo.png">
         <p style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;">{{title}}</p><br>
         <!-- <p style="color: rgb(255, 55, 255);animation: swing 200ms ease-in-out 100ms forwards">RIDES</p> -->
-        <!-- <p style="color: grey;">table i#: {{tableNo}}</p> -->
     </div>
-
-    <!-- RECRUTER -->
-    <!-- <div class="menu" style="margin-top: 50px;">
-
-        <div class="foodCard" *ngFor="let item of food; index as i" style="color: white;">
-
-            <img class="pizzaImage" style="width: 90%;margin-top: 50px;" [src]="item.imgSrc">
-            <h1 class="title secondary-text" style="padding-top: 10px;">{{item.name}}</h1>
-            <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div>  -->
-    <!-- END RECRUTER -->
-
-    <!-- PROMOTER -->
-
+    <!-- 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 END LOGO 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 -->
     <div class="menu">
 
+        <!-- 🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒 VENUE SCANNED 🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒 -->
         <form *ngIf="isVenueForm" name="loginForm" novalidate class=""
             style="background: white; display: flex;flex-direction: column;margin:20% 20px;padding: 20px;border-radius: 5px;">
             <h1
@@ -47,54 +35,67 @@
                     [ngModelOptions]="{standalone: true}">
             </mat-form-field>
             <!-- *ngIf="(guessAmount != 0) && (secretVenueKey.length > 0) " -->
-            <button *ngIf="(guessAmount != 0) && (secretVenueKey.length > 0) " (click)="validatePromotion()" mat-raised-button style="color: white;" color="primary"
-                class="submit-button" aria-label="LOG IN">
+            <button *ngIf="(guessAmount != 0) && (secretVenueKey.length > 0) " (click)="validatePromotion()"
+                mat-raised-button style="color: white;" color="primary" class="submit-button" aria-label="LOG IN">
                 SUBMIT
             </button>
         </form>
+        <!-- 🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒 END VENUE SCANNED 🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒🎒 -->
 
-
-
+        <!-- 🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶CLIENT🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶 -->
         <form *ngIf="isClientScanned" name="loginForm" novalidate class=""
-        style="background: white; display: flex;flex-direction: column;margin:20% 20px;padding: 20px;border-radius: 5px;">
-        <h1
-            style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;color: red;text-align: center;">
-            Please tell us how many guess are with you</h1><br>
-       
-        <br>
-        <mat-form-field appearance="fill">
-            <mat-label>Number of guess</mat-label>
-            <select [(ngModel)]="clientguessAmount" [ngModelOptions]="{standalone: true}" matNativeControl required>
-                <option *ngFor="let guessNumber of GUESS_AMOUNT_OPTIONS" value="guessNumber">{{guessNumber}}
-                </option>
-            </select>
-        </mat-form-field>
-   
-        <button *ngIf="(clientguessAmount != 0)" (click)="validateGuessAmount(clientguessAmount)" mat-raised-button style="color: white;" color="primary"
-            class="submit-button" aria-label="LOG IN">
-            SUBMIT
-        </button>
-    </form>
+            style="background: white; display: flex;flex-direction: column;margin:20% 20px;padding: 20px;border-radius: 5px;">
+            <h1
+                style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;color: red;text-align: center;">
+                Please tell us how many guess are with you</h1><br>
 
+            <br>
+            <mat-form-field appearance="fill">
+                <mat-label>Number of guess</mat-label>
+                <select [(ngModel)]="clientguessAmount" [ngModelOptions]="{standalone: true}" matNativeControl required>
+                    <option *ngFor="let guessNumber of GUESS_AMOUNT_OPTIONS" value="guessNumber">{{guessNumber}}
+                    </option>
+                </select>
+            </mat-form-field>
+
+            <button *ngIf="(clientguessAmount != 0)" (click)="validateGuessAmount(clientguessAmount)" mat-raised-button
+                style="color: white;" color="primary" class="submit-button" aria-label="LOG IN">
+                SUBMIT
+            </button>
+        </form>
+        <!-- 🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶 END CLIENT🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶🧶 -->
 
         <h1 *ngIf="isPromotionsExpired" style="color: white;
-    text-align: center;
-    margin-top: 40%;
-    font-size: 60px;
-    line-height: 60px;">Sorry this pormotion is alredy redeemed or expired</h1>
+                    text-align: center;
+                    margin-top: 40%;
+                    font-size: 60px;
+                    line-height: 60px;">Sorry this pormotion is alredy redeemed or expired</h1>
         <h1 *ngIf="isPromtionSucess" style="color: white;
-        text-align: center;
-        margin-top: 26%;
-        font-size: 41px;
-        line-height: 60px;">Thank you for your business</h1>
+                    text-align: center;
+                    margin-top: 26%;
+                    font-size: 41px;
+                    line-height: 60px;">Thank you for your business</h1>
+
+        <div *ngIf="goToTheVenue" style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
+            <h1  style="color: white;
+                    text-align: center;
+                    margin-top: 10%;
+                    padding: 10px;
+                    font-size: 25px;
+                    line-height: 40px;">Go to the venu, look for similar QR-CODE and scan it to redeem the Promotion</h1>
+            <img class="logo" style="width: 283px;" src="./assets/img/elite/Promoters/VenueQrCode.png">
+        </div>
 
 
-        <!-- VENUES LIST -->
+        <!-- 🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃 VENUES LIST 🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃-->
         <div class="foodCard" *ngFor="let item of VENUES; index as i" style="color: white;">
             <img class="pizzaImage" style="width: 100%;" [src]="item.imgSrc">
             <h1 class="title secondary-text" style="padding-top: 10px;">{{item.venueName}}</h1>
             <!-- <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div>            -->
         </div>
+
+        <!-- 🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃 END VENUES LIST 🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃🎃-->
+
         <br>
         <br>
         <br>
@@ -102,6 +103,7 @@
         <br>
     </div>
 
+    <!-- 👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾 FOOTER MENU 👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾 -->
     <div class="footer">
         <!-- <button mat-mini-fab color="warn"
             style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;background-color: goldenrod;">
@@ -122,14 +124,24 @@
             </a>
         </button> -->
     </div>
+    <!-- 👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾 END FOOTER MENU 👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾👾 -->
 
-    <!-- MODAL REVIEW -->
-    <div *ngIf="popUpQRCode" class="formFieldValidationAlert" style="background: black;border: black 1px solid;padding: 20px;">
-        <h1 style="color: white;">{{venueName}}</h1>
-        <qrcode [qrdata]="myAngularxQrCode" [width]="140" [errorCorrectionLevel]="'M'"></qrcode>
-        <!-- <img class="logo" style="width: 360px" src="./assets/img/elite/CesarVega/ElitteCesar.jpg" (click)="sendQrCode('eliteCesar', 'i')"> -->
+
+    <!-- 🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻 QRCODE GENERATOR 🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻-->
+    <div *ngIf="popUpQRCode" class="formFieldValidationAlert"
+        style="background: black;border: black 1px solid;padding: 20px;">
+        <div style="color: green;position: absolute;bottom: -35px;font-size: 19px;">{{venueName}}</div>
+
+        <ngx-kjua style="z-index: 1px;margin-top: 10px;" [text]="myAngularxQrCode" [renderAsync]="false"
+            [render]="'svg'" [crisp]="true" [minVersion]="10" [ecLevel]="'H'" [size]="228" [ratio]="undefined"
+            [fill]="qrocodeColor" [back]="qrocodeColorBackground" [rounded]="100" [quiet]="0" [mode]="'plain'"
+            [mSize]="15" [mPosX]="50" [mPosY]="50" [label]="'ELITE'" [fontname]="'sans-serif'" [fontcolor]="'#ff9818'"
+            [image]="'canvas'" [cssClass]="'image-auto'"></ngx-kjua>
+        <img class="logo" style="width: 383px;position: absolute;z-index: -1;"
+            src="./assets/img/elite/Promoters/ClientQrCode.png">
         <!-- REGISTARTION FORM -->
-        <!-- <img class="logo" style="width: 360px;background: white;" src="./assets/img/elite/CesarVega/CesarRecruiter.png"> -->
+        <img id="logo" class="logo" style="width: 60px;background: white;position: absolute;top: 94px;"
+            src="./assets/img/elite//logo.png">
         <!-- <p><a style="color: rgb(255, 255, 255);" target="_blank">{{myAngularxQrCode}}</a></p> -->
         <!-- <button mat-mini-fab color="primary"
             style="color:white;background-color: green;font-size: 6px;margin-bottom: 10px;"
@@ -137,5 +149,5 @@
             <mat-icon>check</mat-icon>
         </button> -->
     </div>
-
+    <!-- 🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻 END QRCODE 🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻🎅🏻-->
 </div>
