--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -118,8 +118,9 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
 
-<div class="scroller-style main-container">
+<div class="scroller-style main-container" dragula="DRAGGABLE_ROW">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
+        <mat-icon style="position:absolute;margin-top: 85px; left: 150px; width:30px">drag_indicator</mat-icon>
 
         <div class="test-name-table">
 
@@ -139,8 +140,8 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
                             <option  *ngFor="let star of  testName.STARS; let x =  index" value="star.icon">{{star.icon}}</option>
                           </select>
                         </mat-form-field> -->
-    
                         <mat-form-field appearance="outline">
+                            
                             <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
                             <select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE" (selectionChange)="setRating(selectedRank,y)">
                                 <option  *ngFor="let star of  testName.STARS; let x =  index" value="star.icon">{{star.icon}}</option>
@@ -148,10 +149,10 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
                           </mat-form-field>
     
                     </div>
-                    <div class="rating-text"   *ngIf="(y === 0 )">RATING</div>
+                    <div class="rating-text"   *ngIf="(y === 0 )">RANKING</div>
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-
+ 
             <div *ngFor="let columnName of columnsNames; let e =  index" style="text-align: center;margin:10px 10px;"
             [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'" >
 
@@ -181,7 +182,7 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
                     [style.font-size]="fontSizeRow +'px'"
                         *ngIf=" !bmxClientPageDesignMode">{{testName[columnName]}}</p>
                 </div>        
-
+                
                 <div class="header-title">
 
                 <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 ROW TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
