--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -8,11 +8,11 @@
         style=" margin: -20px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
     </button>
-    <button (click)="insertNewColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="add column"
+    <button (click)="insertTextColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="add column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
     </button>
-    <button (click)="insertNewColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="add radio column"
+    <button (click)="insertRadioColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="add radio column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">radio_button_unchecked</mat-icon>
     </button>
@@ -175,18 +175,18 @@
 
                     <!-- IF ELSE TEMPLATE INPUTS  -->
                     <input
-                        *ngIf="y !== 0 && bmxClientPageDesignMode && (columnName == 'katakana' || columnName == 'rationale')"
+                        *ngIf="y !== 0  &&  columnName.includes('Radio Column') == true"
                         type="radio" [name]="y" [value]="y">
 
                     <!-- TEXT_AREA  editor mode-->
                     <textarea
-                        *ngIf="y !== 0 && bmxClientPageDesignMode && columnName != 'katakana'  && columnName != 'rationale'"
+                        *ngIf="y !== 0  && bmxClientPageDesignMode && columnName.includes('Radio Column') != true"
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
                         style="outline: none;text-align: center;" class="row-box"
                         [(ngModel)]="testName[columnName]"></textarea>
 
-                    <p *ngIf="y !== 0 && !bmxClientPageDesignMode" [style.font-size]="fontSizeRow +'px'"
+                    <p *ngIf="y !== 0 && !bmxClientPageDesignMode && columnName.includes('Radio Column') != true" [style.font-size]="fontSizeRow +'px'"
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
                 </div>
