--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -16,7 +16,11 @@
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">radio_button_unchecked</mat-icon>
     </button>
-    <button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 125px;" matTooltip="row settings"
+    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -20px 125px;" matTooltip="add radio column"
+        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
+    </button>
+    <button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 155px;" matTooltip="row settings"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
     </button>
@@ -176,15 +180,26 @@
                     <!-- IF ELSE TEMPLATE INPUTS  -->
                     <input *ngIf="y !== 0  &&  columnName.includes('Radio Column') == true" type="radio" [name]="y" [value]="y">
 
-                    <!-- TEXT_AREA  editor mode-->
+                 
+                    <!-- TEXT_AREA COLUMN-->
                     <textarea
-                        *ngIf="y !== 0  && bmxClientPageDesignMode && columnName.includes('Radio Column') != true"
+                    *ngIf="y !== 0  && columnName.includes('Comments') == true"
+                        [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
+                        [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
+                        style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;" class="row-box"
+                        [(ngModel)]="testName[columnName]"></textarea>
+
+
+                    <textarea
+                        *ngIf="y !== 0  && bmxClientPageDesignMode && (columnName.includes('Radio Column') != true) &&  columnName.includes('Comments') != true"
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
                         style="outline: none;text-align: center;" class="row-box"
                         [(ngModel)]="testName[columnName]"></textarea>
 
-                    <p *ngIf="y !== 0 && !bmxClientPageDesignMode && columnName.includes('Radio Column') != true" [style.font-size]="fontSizeRow +'px'"
+                    <p 
+                        *ngIf="y !== 0  && !bmxClientPageDesignMode && (columnName.includes('Radio Column') != true) &&  columnName.includes('Comments') != true"
+                        [style.font-size]="fontSizeRow +'px'"
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
                 </div>
