--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -8,15 +8,15 @@
         style=" margin: -20px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
     </button>
-    <button (click)="insertTextColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="add column"
+    <button (click)="insertTextColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="add Text column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
     </button>
     <button (click)="insertRadioColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="add radio column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">radio_button_unchecked</mat-icon>
+        <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
     </button>
-    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -20px 125px;" matTooltip="add radio column"
+    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -20px 125px;" matTooltip="add Comments column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
     </button>
@@ -96,12 +96,12 @@
 
 
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
-<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="mat-elevation-z2" style="display: flex;
+<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     width: 86%;
-    position: relative;
-    top: -15px;
+    position: absolute;
+    top: -50px;
     left: 40px;
     border-radius: 15px;">
 
@@ -144,7 +144,7 @@
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
                     (mouseleave)="selectedColumn = ''">
 
-                    <span *ngIf="selectedColumn === e" class="header-delete-icon" matTooltip="delete column"
+                    <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon" matTooltip="delete column"
                         matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
@@ -178,7 +178,8 @@
 
 
                     <!-- IF ELSE TEMPLATE INPUTS  -->
-                    <input *ngIf="y !== 0  &&  columnName.includes('Radio Column') == true" type="radio" [name]="y" [value]="y">
+                    <input *ngIf="y !== 0  &&  columnName.includes('Radio Column') == true" type="radio"
+                            [name]="y" [value]="testName[columnName]" (change)="saveRadioColumValue(columnName, y)">
 
                  
                     <!-- TEXT_AREA COLUMN-->
@@ -187,7 +188,7 @@
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
                         style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;" class="row-box"
-                        [(ngModel)]="testName[columnName]"></textarea>
+                        [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
 
 
                     <textarea
@@ -206,8 +207,7 @@
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
             </div>
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-            <div style="text-align: center;min-width: 380px;">
-
+            <div style="text-align: end;min-width: 200px;">
                 <div *ngIf="(y !== 0)">
                     <div *ngIf="testName.CRITERIA; else elseBlock">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index"
@@ -225,7 +225,6 @@
                             </div>
                         </div>
                     </div>
-
                     <ng-template #elseBlock>
                         <button *ngFor="let star of  testName.STARS; let x =  index"
                             (click)="setRating(star.id,y)" [ngClass]="star.class"
@@ -234,7 +233,6 @@
                             <mat-icon>{{star.icon}}</mat-icon>
                         </button>
                     </ng-template>
-
                 </div>
                 <div class="rating-text" *ngIf="(y === 0 )">RATING</div>
             </div>
