--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -260,7 +260,7 @@
     style="display: flex;flex-direction: column;align-items: center;justify-content: space-around;">
     <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{templateTitle}}</h2>
 
-        <p>Are you sure you want to reset the template?</p>
+        <h1 style="text-align: center;">Are you sure you want to reset the template?</h1>
        
     <div style="display: flex;flex-direction: row;justify-content: space-evenly; width: 200px;">
         <button mat-raised-button
@@ -278,7 +278,7 @@
     style="display: flex;flex-direction: column;align-items: center;justify-content: space-around;">
     <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{templateTitle}}</h2>
     
-        <p *ngIf="isUpdateBoxOn">Are you sure you want to update the current template?</p>
+        <h2 *ngIf="isUpdateBoxOn">Are you sure you want to update the current template?</h2>
     
     <div style="display: flex;flex-direction: row;justify-content: space-evenly; width: 200px;">
         <button mat-raised-button
