--- a/src/app/elite/elite-business-card/elite-business-card.component.html
+++ b/src/app/elite/elite-business-card/elite-business-card.component.html
@@ -1,4 +1,3 @@
-
 <div *ngIf="!isSettingsOn" class="settings-box" style="z-index: 999;height: 100vh;
 width: 100vh;
 background: #db000026;">
@@ -6,56 +5,75 @@ background: #db000026;">
     Settings
 
 </div>
-<div *ngIf="!isSettingsOn"  [ngClass]="theme[themeIndex].themeName"  class="mainContainer disable-dbl-tap-zoom">
-   
-
-        <h1 class="title" (click)="changeTheme()">{{user[userIndex].title}}</h1>
+<div *ngIf="!isSettingsOn" [ngClass]="theme[themeIndex].themeName" class="mainContainer disable-dbl-tap-zoom">
 
 
-        <!-- HEADER -->
-        <img [src]="theme[themeIndex].header" class="header" >
+    <h1 class="title" (click)="changeTheme()">{{user[userIndex].title}}</h1>
 
 
-        <!-- BODY -->
-        <img [src]="theme[themeIndex].body" style="width: 100%;height: 100%;" class="kenburns-top">
+    <!-- HEADER -->
+    <img [src]="theme[themeIndex].header" class="header">
 
-        <!-- BI BRAND GO BUTTON -->
-        <div class=" smartRadialButton ">
 
-            <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" mat-icon-button
-                (click)="goVote()">
-                {{user[userIndex].logoInitial}}
-            </button>
+    <!-- BODY -->
+    <img [src]="theme[themeIndex].body" style="    width: 100%;
+        position: fixed;
+        top: 0px;" class="kenburns-top">
 
-            <button (click)="sendQrCode('WhatsApp')" *ngIf="isRadialMenuOn" class="G4 GG" mat-icon-button>
-                <mat-icon>whatsapp</mat-icon>
-            </button>
+    <!-- BI BRAND GO BUTTON -->
+    <div class=" smartRadialButton ">
 
-            <button (click)="sendQrCode('Phone')" *ngIf="isRadialMenuOn" class="G2 GG" mat-icon-button>
-                <mat-icon>phone_in_talk</mat-icon>
-            </button>
+        <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" mat-icon-button (click)="goVote()">
+            {{user[userIndex].logoInitial}}
+        </button>
 
-            <button (click)="sendQrCode('Instagram')" *ngIf="isRadialMenuOn" class="G3 GG" mat-icon-button>
-                <fa-icon [icon]="faInstagram"></fa-icon>
-            </button>
+        <button (click)="sendQrCode('WhatsApp')" *ngIf="isRadialMenuOn" class="G4 GG" mat-icon-button>
+            <mat-icon>whatsapp</mat-icon>
+        </button>
 
-            <button (click)="sendQrCode('Ca$hApp')" *ngIf="isRadialMenuOn" class="G1 GG" mat-icon-button>
-                <mat-icon>attach_money</mat-icon>
-            </button>
+        <button (click)="sendQrCode('Phone')" *ngIf="isRadialMenuOn" class="G2 GG" mat-icon-button>
+            <mat-icon>phone_in_talk</mat-icon>
+        </button>
+
+        <button (click)="sendQrCode('Instagram')" *ngIf="isRadialMenuOn" class="G3 GG" mat-icon-button>
+            <fa-icon [icon]="faInstagram"></fa-icon>
+        </button>
+
+        <button (click)="sendQrCode('Ca$hApp')" *ngIf="isRadialMenuOn" class="G1 GG" mat-icon-button>
+            <mat-icon>attach_money</mat-icon>
+        </button>
+
+    </div>
+
+    <div class="name">
+        {{user[userIndex].username}}</div>
+    <!-- <button class="description" mat-icon-button (click)="auth.signOut()"> <mat-icon>cancel</mat-icon></button> -->
+
+    <h3 class="description">{{user[userIndex].userDescription}}</h3>
+
+    <!-- <img src="./assets/img/elite/CesarVega/bodyR.jpg" style="width: 100%;"> -->
+    <img [src]="theme[themeIndex].footer" class="footer">
+
+
+
+    <div class="mainContainer" style=" position: absolute;
+        top: 48%;
+        left: 50%;
+        transform: translate(-50%, -55%);
+        border-radius: 10px;
+        text-align: center;">
+
+        <div
+            style="height: 100px; width: 100px;border: hotpink 1px solid;background-color: indigo;z-index: 9999999999;">
+
+            <div >
+                <div style="position: absolute;top:71px" #canvas></div>
+                <img style="width: 360px;" src="./assets/img/elite/Promoters/darkBlueW.png">
+            </div>
 
         </div>
-
-        <div class="name">
-            {{user[userIndex].username}}</div>
-            <button class="description" mat-icon-button (click)="auth.signOut()"> <mat-icon>cancel</mat-icon></button>
-
-        <h3 class="description">{{user[userIndex].userDescription}}</h3>
-
-        <!-- <img src="./assets/img/elite/CesarVega/bodyR.jpg" style="width: 100%;"> -->
-        <img [src]="theme[themeIndex].footer" class="footer">
+    </div>
 
 
 
-
-    
 </div>
